--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     color: #b35d82;
     user-select: text; /* que el título sí pueda seleccionarse */
   }
+<div class="firma">Hecho con 💖 por Guada Suarez</div>
 
   /* Contenedor principal */
   .malla {
@@ -141,7 +142,7 @@
 </head>
 <body>
 
-<h2>Malla Interactiva UNSL - Rosa Pastel</h2>
+<h2>Ingenieria en Informática UNSL - Plan nuevo</h2>
 
 <div class="malla" id="malla">
 
