--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       Programación I
       <div class="tipo-cuatrimestre">2º</div>
     </div>
-    <div class="materia locked" data-id="matematica-discreta" data-correlativas="" data-tipo="2" tabindex="0">
+    <div class="materia locked" data-id="matematica-discreta" data-correlativas="algebra1" data-tipo="2" tabindex="0">
       Matemática Discreta
       <div class="tipo-cuatrimestre">2º</div>
     </div>
@@ -181,19 +181,15 @@
   <!-- 2do Año -->
   <section class="anio" data-anio="2">
     <h3>2º Año</h3>
-    <div class="materia locked" data-id="probabilidad-estadistica" data-correlativas="calculo1" data-tipo="1" tabindex="0">
+    <div class="materia locked" data-id="probabilidad-estadistica" data-correlativas="matematica-discreta" data-tipo="1" tabindex="0">
       Probabilidad y Estadística
       <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia" data-id="ingles" data-correlativas="" data-tipo="anual" tabindex="0">
-      Inglés
-      <div class="tipo-cuatrimestre">Anual</div>
     </div>
     <div class="materia locked" data-id="programacion2" data-correlativas="programacion1" data-tipo="1" tabindex="0">
       Programación II
       <div class="tipo-cuatrimestre">1º</div>
     </div>
-    <div class="materia locked" data-id="org-arquitectura" data-correlativas="" data-tipo="1" tabindex="0">
+    <div class="materia locked" data-id="org-arquitectura" data-correlativas="programacion1" data-tipo="1" tabindex="0">
       Organización y Arquitectura de Computadoras
       <div class="tipo-cuatrimestre">1º</div>
     </div>
@@ -201,14 +197,18 @@
       Programación III
       <div class="tipo-cuatrimestre">2º</div>
     </div>
-    <div class="materia locked" data-id="estructuras-datos" data-correlativas="programacion2" data-tipo="2" tabindex="0">
+    <div class="materia locked" data-id="estructuras-datos" data-correlativas="programacion2,probabilidad-estadistica" data-tipo="2" tabindex="0">
       Estructuras de Datos y Algoritmos
       <div class="tipo-cuatrimestre">2º</div>
     </div>
-    <div class="materia locked" data-id="fisica" data-correlativas="" data-tipo="anual" tabindex="0">
+    <div class="materia locked" data-id="fisica" data-correlativas="calculo1,algebra1" data-tipo="anual" tabindex="0">
       Física
       <div class="tipo-cuatrimestre">Anual</div>
     </div>
+        <div class="materia" data-id="ingles" data-correlativas="" data-tipo="anual" tabindex="0">
+      Inglés
+      <div class="tipo-cuatrimestre">Anual</div>
+    </div> 
   </section>
 
   <!-- 3er Año -->
