--- a/index.html
+++ b/index.html
@@ -6,29 +6,23 @@
 <title>Malla Interactiva UNSL - Rosa Pastel</title>
 <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet" />
 <style>
-  /* Reset box-sizing */
   * {
     box-sizing: border-box;
   }
-
-  /* Body y fuente */
   body {
     margin: 0; padding: 20px;
-    background: #fffafc; /* suave, no blanco puro */
+    background: #fffafc;
     font-family: 'Comic Neue', cursive, sans-serif;
     color: #4a4a4a;
-    user-select: none; /* para evitar seleccionar texto al click */
+    user-select: none;
   }
-
   h2 {
     text-align: center;
     margin-bottom: 15px;
     font-weight: 700;
     color: #b35d82;
-    user-select: text; /* que el título sí pueda seleccionarse */
+    user-select: text;
   }
-
-  /* Contenedor principal */
   .malla {
     display: flex;
     gap: 20px;
@@ -37,21 +31,12 @@
     overflow-x: auto;
     padding-bottom: 10px;
   }
-
-  /* Para que en pantallas chicas el scroll horizontal sea natural */
   @media (max-width: 1024px) {
-    .malla {
-      flex-wrap: nowrap;
-    }
+    .malla { flex-wrap: nowrap; }
   }
   @media (max-width: 600px) {
-    .malla {
-      flex-wrap: wrap;
-      justify-content: center;
-    }
+    .malla { flex-wrap: wrap; justify-content: center; }
   }
-
-  /* Año */
   .anio {
     background: #ffe9f1;
     border-radius: 14px;
@@ -63,9 +48,7 @@
     box-shadow: 0 4px 10px rgba(179, 93, 130, 0.25);
     transition: transform 0.25s ease;
   }
-  .anio:hover {
-    transform: translateY(-6px);
-  }
+  .anio:hover { transform: translateY(-6px); }
   .anio h3 {
     margin: 0 0 12px 0;
     text-align: center;
@@ -74,19 +57,13 @@
     padding-bottom: 6px;
     font-weight: 700;
   }
-
-  /* Materias */
   .materia {
     background: #f8cee2;
     border-radius: 12px;
     padding: 14px 14px;
     cursor: pointer;
     box-shadow: 0 3px 6px rgba(193, 112, 143, 0.4);
-    transition:
-      background-color 0.3s ease,
-      color 0.3s ease,
-      box-shadow 0.3s ease,
-      transform 0.15s ease;
+    transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease, transform 0.15s ease;
     font-weight: 600;
     font-size: 1.05rem;
     position: relative;
@@ -97,7 +74,6 @@
     box-shadow: 0 6px 14px #d36f8aaa;
     transform: translateY(-3px);
   }
-
   .materia.locked {
     background: #e4b8cc;
     cursor: not-allowed;
@@ -105,7 +81,6 @@
     box-shadow: none;
     transform: none !important;
   }
-
   .materia.aprobada {
     background-color: #f4c2d7;
     border: 2px solid #d36f8a;
@@ -117,8 +92,6 @@
     box-shadow: 0 0 14px #d36f8aff;
     transform: translateY(-3px);
   }
-
-  /* Indicadores de cuatrimestre/anual */
   .tipo-cuatrimestre {
     font-size: 0.85rem;
     margin-top: 8px;
@@ -127,8 +100,6 @@
     text-align: right;
     user-select: none;
   }
-
-  /* Efecto "pop" rápido al click */
   .materia.clicked {
     animation: popclick 0.2s ease forwards;
   }
@@ -137,203 +108,50 @@
     50% { transform: scale(1.1); }
     100% { transform: scale(1); }
   }
+  .firma {
+    position: fixed;
+    bottom: 10px;
+    right: 15px;
+    font-size: 0.85rem;
+    color: #c67c98;
+    background: #fff0f6;
+    padding: 6px 10px;
+    border-radius: 12px;
+    box-shadow: 0 2px 6px rgba(179, 93, 130, 0.2);
+    z-index: 1000;
+  }
 </style>
 </head>
 <body>
 
-<h2>Ingenieria en Informática UNSL - Plan nuevo</h2>
+<h2>Ingeniería en Informática UNSL - Plan nuevo</h2>
 
 <div class="malla" id="malla">
-
-  <!-- 1er Año -->
-  <section class="anio" data-anio="1">
-    <h3>1º Año</h3>
-    <div class="materia" data-id="intro-calc" data-correlativas="" data-tipo="1" tabindex="0">
-      Introducción al Cálculo
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia" data-id="algebra1" data-correlativas="" data-tipo="1" tabindex="0">
-      Álgebra I
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia" data-id="resolucion-problemas" data-correlativas="" data-tipo="1" tabindex="0">
-      Resolución de Problemas y Algoritmos
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="programacion1" data-correlativas="resolucion-problemas" data-tipo="2" tabindex="0">
-      Programación I
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia locked" data-id="matematica-discreta" data-correlativas="algebra1" data-tipo="2" tabindex="0">
-      Matemática Discreta
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia locked" data-id="calculo1" data-correlativas="intro-calc" data-tipo="2" tabindex="0">
-      Cálculo I
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia locked" data-id="algebra2" data-correlativas="algebra1" data-tipo="2" tabindex="0">
-      Álgebra II
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-  </section>
-
-  <!-- 2do Año -->
-  <section class="anio" data-anio="2">
-    <h3>2º Año</h3>
-    <div class="materia locked" data-id="probabilidad-estadistica" data-correlativas="matematica-discreta" data-tipo="1" tabindex="0">
-      Probabilidad y Estadística
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="programacion2" data-correlativas="programacion1" data-tipo="1" tabindex="0">
-      Programación II
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="org-arquitectura" data-correlativas="programacion1" data-tipo="1" tabindex="0">
-      Organización y Arquitectura de Computadoras
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="programacion3" data-correlativas="programacion2" data-tipo="2" tabindex="0">
-      Programación III
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia locked" data-id="estructuras-datos" data-correlativas="programacion2,probabilidad-estadistica" data-tipo="2" tabindex="0">
-      Estructuras de Datos y Algoritmos
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia locked" data-id="fisica" data-correlativas="calculo1,algebra1" data-tipo="anual" tabindex="0">
-      Física
-      <div class="tipo-cuatrimestre">Anual</div>
-    </div>
-        <div class="materia" data-id="ingles" data-correlativas="" data-tipo="anual" tabindex="0">
-      Inglés
-      <div class="tipo-cuatrimestre">Anual</div>
-    </div> 
-  </section>
-
-  <!-- 3er Año -->
-  <section class="anio" data-anio="3">
-    <h3>3º Año</h3>
-    <div class="materia locked" data-id="ingenieria-software1" data-correlativas="programacion3" data-tipo="1" tabindex="0">
-      Ingeniería de Software I
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="etica-legislacion" data-correlativas="" data-tipo="1" tabindex="0">
-      Ética y Legislación
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="base-datos" data-correlativas="programacion3" data-tipo="1" tabindex="0">
-      Base de Datos
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="modelos-simulacion" data-correlativas="" data-tipo="1" tabindex="0">
-      Modelos y Simulación
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="fundamentos-computacion" data-correlativas="calculo1" data-tipo="1" tabindex="0">
-      Fundamentos de Computación
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="ingenieria-software2" data-correlativas="ingenieria-software1" data-tipo="2" tabindex="0">
-      Ingeniería de Software II
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia locked" data-id="laboratorio-tecnologias" data-correlativas="ingenieria-software1" data-tipo="2" tabindex="0">
-      Laboratorio de Tecnologías
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia locked" data-id="redes-computadoras" data-correlativas="fundamentos-computacion" data-tipo="2" tabindex="0">
-      Redes de Computadoras
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia locked" data-id="sistemas-operativos" data-correlativas="fundamentos-computacion" data-tipo="2" tabindex="0">
-      Sistemas Operativos
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia locked" data-id="analisis-numerico" data-correlativas="calculo1" data-tipo="2" tabindex="0">
-      Análisis Numérico
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-  </section>
-
-  <!-- 4to Año -->
-  <section class="anio" data-anio="4">
-    <h3>4º Año</h3>
-    <div class="materia locked" data-id="planeamiento-estrategico" data-correlativas="ingenieria-software2" data-tipo="1" tabindex="0">
-      Planeamiento Estratégico de Sistemas de Información
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="sistemas-criticos" data-correlativas="ingenieria-software2" data-tipo="1" tabindex="0">
-      Sistemas Críticos
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="ingenieria-web" data-correlativas="ingenieria-software2" data-tipo="1" tabindex="0">
-      Ingeniería Web
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="teoria-informacion" data-correlativas="ingenieria-software2" data-tipo="1" tabindex="0">
-      Teoría de la Información y la Comunicación
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="calidad-certificacion" data-correlativas="ingenieria-software2" data-tipo="2" tabindex="0">
-      Calidad y Certificación del Proceso y del Producto de Software
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia locked" data-id="auditoria-informatica" data-correlativas="ingenieria-software2" data-tipo="2" tabindex="0">
-      Auditoría Informática
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia locked" data-id="sistemas-inteligentes" data-correlativas="ingenieria-software2" data-tipo="2" tabindex="0">
-      Sistemas Inteligentes
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia locked" data-id="diseno-lenguajes" data-correlativas="ingenieria-software2" data-tipo="2" tabindex="0">
-      Diseño y Paradigmas de Lenguajes
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia locked" data-id="seguridad-sistemas" data-correlativas="ingenieria-software2" data-tipo="2" tabindex="0">
-      Seguridad de Sistemas Informáticos
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-  </section>
-
-  <!-- 5to Año -->
-  <section class="anio" data-anio="5">
-    <h3>5º Año</h3>
-    <div class="materia locked" data-id="arquitectura-software" data-correlativas="diseno-lenguajes" data-tipo="1" tabindex="0">
-      Arquitectura de Software
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="reingenieria-organizaciones" data-correlativas="diseno-lenguajes" data-tipo="1" tabindex="0">
-      Reingeniería de las Organizaciones y de los Sist. de Información
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia locked" data-id="administracion-evaluacion" data-correlativas="diseno-lenguajes" data-tipo="1" tabindex="0">
-      Administración y Evaluación Financiera de Proyectos Informáticos
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia" data-id="optativa1" data-correlativas="" data-tipo="1" tabindex="0">
-      Optativa (Mínimo 75 hs.)
-      <div class="tipo-cuatrimestre">1º</div>
-    </div>
-    <div class="materia" data-id="optativa2" data-correlativas="" data-tipo="2" tabindex="0">
-      Optativa (Mínimo 75 hs.)
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia" data-id="practica-profesional" data-correlativas="" data-tipo="2" tabindex="0">
-      Práctica Profesional Supervisada
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-    <div class="materia" data-id="proyecto-integrador" data-correlativas="" data-tipo="2" tabindex="0">
-      Proyecto Integrador
-      <div class="tipo-cuatrimestre">2º</div>
-    </div>
-  </section>
-
+  <!-- Acá van las secciones de materias (omitidas para simplificar, pero mantené todas las que ya tenés) -->
 </div>
+
+<div class="firma">Hecho con 💻 por Guada Suarez</div>
 
 <script>
   const materias = {};
+
+  function guardarEstado() {
+    const estado = {};
+    for (const id in materias) {
+      estado[id] = materias[id].aprobada;
+    }
+    localStorage.setItem("estadoMaterias", JSON.stringify(estado));
+  }
+
+  function cargarEstado() {
+    const estadoGuardado = JSON.parse(localStorage.getItem("estadoMaterias"));
+    if (!estadoGuardado) return;
+    for (const id in estadoGuardado) {
+      if (materias[id]) {
+        materias[id].aprobada = estadoGuardado[id];
+      }
+    }
+  }
 
   // Inicializo materias y correlativas
   document.querySelectorAll('.materia').forEach(materia => {
@@ -347,7 +165,8 @@
     };
   });
 
-  // Actualizo estado de bloqueo y estilos
+  cargarEstado();
+
   function actualizarDesbloqueo() {
     for (const id in materias) {
       const mat = materias[id];
@@ -356,11 +175,10 @@
         mat.element.classList.remove('locked');
       } else {
         if (mat.correlativas.length === 0) {
-          // Sin correlativas: desbloqueada
           mat.element.classList.remove('locked');
         } else {
-          const todasCorrelativasAprobadas = mat.correlativas.every(corrId => materias[corrId]?.aprobada);
-          if (todasCorrelativasAprobadas) {
+          const todasAprobadas = mat.correlativas.every(corrId => materias[corrId]?.aprobada);
+          if (todasAprobadas) {
             mat.element.classList.remove('locked');
           } else {
             mat.element.classList.add('locked');
@@ -373,19 +191,18 @@
 
   actualizarDesbloqueo();
 
-  // Click en la materia para toggle aprobar/desaprobar
+  // Click en la materia
   document.querySelectorAll('.materia').forEach(materia => {
     materia.addEventListener('click', () => {
       if (materia.classList.contains('locked')) return;
       const id = materia.dataset.id;
       materias[id].aprobada = !materias[id].aprobada;
       actualizarDesbloqueo();
+      guardarEstado();
 
-      // Animación pop al click
+      // Animación
       materia.classList.add('clicked');
-      setTimeout(() => {
-        materia.classList.remove('clicked');
-      }, 200);
+      setTimeout(() => materia.classList.remove('clicked'), 200);
     });
   });
 </script>
