--- a/index.html
+++ b/index.html
@@ -196,43 +196,43 @@
   <!-- 3er Año -->
   <section class="anio" data-anio="3">
     <h3>3º Año</h3>
-    <div class="materia locked" data-id="ingenieria-software1" data-correlativas="programacion3" data-tipo="1" tabindex="0">
+    <div class="materia locked" data-id="ingenieria-software1" data-correlativas="programacion2" data-tipo="1" tabindex="0">
       Ingeniería de Software I
       <div class="tipo-cuatrimestre">1º</div>
     </div>
-    <div class="materia locked" data-id="etica-legislacion" data-correlativas="" data-tipo="1" tabindex="0">
+    <div class="materia locked" data-id="etica-legislacion" data-correlativas="programacion2" data-tipo="1" tabindex="0">
       Ética y Legislación
       <div class="tipo-cuatrimestre">1º</div>
     </div>
-    <div class="materia locked" data-id="base-datos" data-correlativas="programacion3" data-tipo="1" tabindex="0">
+    <div class="materia locked" data-id="base-datos" data-correlativas="estructuras-datos" data-tipo="1" tabindex="0">
       Base de Datos
       <div class="tipo-cuatrimestre">1º</div>
     </div>
-    <div class="materia locked" data-id="modelos-simulacion" data-correlativas="" data-tipo="1" tabindex="0">
+    <div class="materia locked" data-id="modelos-simulacion" data-correlativas="probabilidad-estadistica,programacion2" data-tipo="1" tabindex="0">
       Modelos y Simulación
       <div class="tipo-cuatrimestre">1º</div>
     </div>
-    <div class="materia locked" data-id="fundamentos-computacion" data-correlativas="calculo1" data-tipo="1" tabindex="0">
+    <div class="materia locked" data-id="fundamentos-computacion" data-correlativas="estructuras-datos" data-tipo="1" tabindex="0">
       Fundamentos de Computación
       <div class="tipo-cuatrimestre">1º</div>
     </div>
-    <div class="materia locked" data-id="ingenieria-software2" data-correlativas="ingenieria-software1" data-tipo="2" tabindex="0">
+    <div class="materia locked" data-id="ingenieria-software2" data-correlativas="ingenieria-software1,base-datos" data-tipo="2" tabindex="0">
       Ingeniería de Software II
       <div class="tipo-cuatrimestre">2º</div>
     </div>
-    <div class="materia locked" data-id="laboratorio-tecnologias" data-correlativas="ingenieria-software1" data-tipo="2" tabindex="0">
+    <div class="materia locked" data-id="laboratorio-tecnologias" data-correlativas="ingenieria-software1,base-datos,programacion3" data-tipo="2" tabindex="0">
       Laboratorio de Tecnologías
       <div class="tipo-cuatrimestre">2º</div>
     </div>
-    <div class="materia locked" data-id="redes-computadoras" data-correlativas="fundamentos-computacion" data-tipo="2" tabindex="0">
+    <div class="materia locked" data-id="redes-computadoras" data-correlativas="programacion2,org-arquitectura" data-tipo="2" tabindex="0">
       Redes de Computadoras
       <div class="tipo-cuatrimestre">2º</div>
     </div>
-    <div class="materia locked" data-id="sistemas-operativos" data-correlativas="fundamentos-computacion" data-tipo="2" tabindex="0">
+    <div class="materia locked" data-id="sistemas-operativos" data-correlativas="org-arquitectura,modelos-simulacion" data-tipo="2" tabindex="0">
       Sistemas Operativos
       <div class="tipo-cuatrimestre">2º</div>
     </div>
-    <div class="materia locked" data-id="analisis-numerico" data-correlativas="calculo1" data-tipo="2" tabindex="0">
+    <div class="materia locked" data-id="analisis-numerico" data-correlativas="programacion2" data-tipo="2" tabindex="0">
       Análisis Numérico
       <div class="tipo-cuatrimestre">2º</div>
     </div>
@@ -314,7 +314,7 @@
 
 </div>
 
-<div class="firma">Hecho con 💻 por Guada Suarez</div>
+<div class="firma">Hecho por Guada Suarez<3</div>
 
 <script>
   const materias = {};
