--- a/index.html
+++ b/index.html
@@ -294,11 +294,11 @@
       Administración y Evaluación Financiera de Proyectos Informáticos
       <div class="tipo-cuatrimestre">1º</div>
     </div>
-    <div class="materia" data-id="optativa1" data-correlativas="" data-tipo="1" tabindex="0">
+    <div class="materia" data-id="optativa1" data-correlativas="seguridad-sistemas" data-tipo="1" tabindex="0">
       Optativa (Mínimo 75 hs.)
       <div class="tipo-cuatrimestre">1º</div>
     </div>
-    <div class="materia" data-id="optativa2" data-correlativas="" data-tipo="2" tabindex="0">
+    <div class="materia" data-id="optativa2" data-correlativas="seguridad-sistemas" data-tipo="2" tabindex="0">
       Optativa (Mínimo 75 hs.)
       <div class="tipo-cuatrimestre">2º</div>
     </div>
@@ -306,7 +306,7 @@
       Práctica Profesional Supervisada
       <div class="tipo-cuatrimestre">2º</div>
     </div>
-    <div class="materia" data-id="proyecto-integrador" data-correlativas="" data-tipo="2" tabindex="0">
+    <div class="materia" data-id="proyecto-integrador" data-correlativas="arquitectura-software" data-tipo="2" tabindex="0">
       Proyecto Integrador
       <div class="tipo-cuatrimestre">2º</div>
     </div>
