--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
       Optativa (Mínimo 75 hs.)
       <div class="tipo-cuatrimestre">2º</div>
     </div>
-    <div class="materia" data-id="practica-profesional" data-correlativas="" data-tipo="2" tabindex="0">
+    <div class="materia" data-id="practica-profesional" data-correlativas="arquitectura-software" data-tipo="2" tabindex="0">
       Práctica Profesional Supervisada
       <div class="tipo-cuatrimestre">2º</div>
     </div>
